src/scss/layout/_modal.scss
/* Layout Layer - Pure structural positioning and sizing */
@use "sass:map";
@use "../variables" as tokens;

%wc-ai-rr-modal {
	// Positioning and display
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;

	&__overlay {
		// Overlay positioning
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
	}

	&__content {
		// Content container sizing and positioning
		width: 90%;
		position: relative;
		z-index: 1;
	}

	&__actions {
		// Action buttons layout
		display: flex;
		justify-content: flex-end;
		gap: map.get(tokens.$spacing, "sm");
	}

	&__label {
		display: block;
	}

	&__spinner {
		// Spinner sizing
		width: 40px;
		height: 40px;
		margin: 0 auto map.get(tokens.$spacing, "lg");
	}
}

